# padel-tavernes

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  run.py
.github/: dependabot.yml
.github/workflows/: tests.yml
app/: __init__.py  cache.py  context_helpers.py  middleware.py  models.py  settings.py
app/api/: availability.py  common.py  errors.py  geolocation.py  greedy_players.py  routes.py  sites.py  tested_sites.py  usage.py
app/integrations/geolocation/: geolocation_provider_interface.py  location_iq.py
app/integrations/scrapers/: __init__.py  matchpoint_scraper.py  playtomic_scraper.py  scraper_interface.py  websdepadel_scraper.py
app/services/: availability.py  common.py  geolocation.py  get_weekly_dates.py  greedy_players.py  scrap_court_data.py  scrap_greedy_players.py  sites.py  usage.py
tests/: conftest.py  test_middleware.py  test_models.py
tests/api/: test_availability.py  test_geolocation.py  test_greedy_players.py  test_sites.py  test_tested_sites.py  test_usage.py
tests/integrations/geolocation/: test_location_iq.py
tests/integrations/scrapers/: test_matchpoint_scraper.py  test_playtomic_scraper.py  test_websdepadel_scraper.py
tests/services/: test_availability.py  test_common.py  test_geolocation.py  test_get_weekly_dates.py  test_greedy_players.py  test_scrap_court_data.py  test_scrap_greedy_players.py  test_sites.py  test_usage.py
