[tool.poetry]
name = "padel-tavernes"
version = "0.1.0"
description = "padel statistics in tavernes blanques"
authors = ["Daniel Sanchez Campillos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
Flask = "^3.0.3"
pydantic = "^2.7.3"
unidecode = "^1.3.8"
flask-restx = "^1.3.0"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
autoflake = "^2.2.0"
isort = "^5.12.0"
flake8 = "^7.1.0"
mypy = "^1.5.1"
types-requests = "^2.32.0.20240602"
types-beautifulsoup4 = "^4.12.0.20240511"
freezegun = "^1.5.1"
flake8-print = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
